--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -8,12 +8,31 @@
 	<!-- Creates the Spring Container shared by all Servlets and Filters -->
 
 	<!-- Processes application requests -->
+	
+	<filter>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+	</filter>
+ 
+	<filter-mapping>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <url-pattern>/*</url-pattern>
+	</filter-mapping>
+	
+	<context-param>
+ 	<param-name>contextConfigLocation</param-name>
+ 	<param-value>
+ 	/WEB-INF/spring-security.xml
+ 	</param-value>
+ 	</context-param>
+ 	
 	<servlet>
 		<servlet-name>appServlet</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
 			<param-value>/WEB-INF/spring/appServlet/servlet-context.xml</param-value>
+			
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
@@ -22,5 +41,9 @@
 		<servlet-name>appServlet</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
+	
+	<listener>
+ 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+	</listener>
 
 </web-app>
