--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -22,6 +22,7 @@
 	<context-param>
  	<param-name>contextConfigLocation</param-name>
  	<param-value>
+ 	/WEB-INF/spring/appServlet/servlet-context.xml
  	/WEB-INF/spring-security.xml
  	</param-value>
  	</context-param>
